--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-title: <strong>Alexandre B A Villares</strong>
+title: <strong>Alexandre Villares</strong>
 
-site_name: Alexandre B A Villares
+site_name: Alexandre Villares
 
 # Name of your blog (this will show up at the top of your page and in the RSS feed)
-name: Alexandre B A Villares
+name: Alexandre Villares
 
 # Short description (goes below the title; it will also be used in the RSS feed)
-# description: Alexandre B A Villares
+description: Alexandre B A Villares
 
 # Your name, as you want it to appear underneath each post and in the footer
-author: Alexandre B A Villares
+author: Alexandre Villares
 
 # Your email if you want it to be linked on the contact page
 # author_email: 
