--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: <strong>Alexandre Villares</strong>
 site_name: Alexandre Villares
 
 # Name of your blog (this will show up at the top of your page and in the RSS feed)
-name: Alexandre Villares
+name: Alexandre B A Villares
 
 # Your name, as you want it to appear underneath each post and in the footer
 author: Alexandre Villares
