--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: <strong>Alexandre Villares</strong>
+title: <strong>Alexandre B A Villares</strong>
 
-site_name: Alexandre Villares
+site_name: Alexandre B A Villares @ lugaralgum
 
 # Name of your blog (this will show up at the top of your page and in the RSS feed)
-name: Alexandre B A Villares
+name: Alexandre B. A. Villares
 
 # Your name, as you want it to appear underneath each post and in the footer
 author: Alexandre Villares
